Fixed Total duration of purrlist